--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
         </nav>
         <ul class="list contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link header-contacts mail"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380961111111" class="link header-contacts">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link header-contacts phone">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -125,6 +127,21 @@
                 <p lang="en" class="team-position">UI Designer</p>
               </div>
             </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section clients">
+        <div class="container">
+          <h2 class="section-title">Постійні клієнти</h2>
+          <ul class="list clients-list">
+            <li class="clients-item"><a href=""></a></li>
+            <li class="clients-item"><a href=""></a></li>
+            <li class="clients-item"><a href=""></a></li>
+            <li class="clients-item"><a href=""></a></li>
+            <li class="clients-item"><a href=""></a></li>
+            <li class="clients-item"><a href=""></a></li>
+            <li class="clients-item"><a href=""></a></li>
+            <li class="clients-item"><a href=""></a></li>
           </ul>
         </div>
       </section>
