--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
         <a href="./index.html" lang="en" class="logo">Web<span class="logo-dark">Studio</span></a>
         <nav>
           <ul class="list top-nav">
-            <li><a href="./index.html" class="link navigation current">Студія</a></li>
-            <li><a href="./portfolio.html" class="link navigation">Портфоліо</a></li>
+            <li><a href="./index.html" class="link navigation">Студія</a></li>
+            <li><a href="./portfolio.html" class="link navigation current">Портфоліо</a></li>
             <li><a href="" class="link navigation">Контакти</a></li>
           </ul>
         </nav>
