--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
               <div class="card-caption">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-position">Product Designer</p>
+                <ul class="list soc-list">
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="card">
@@ -111,6 +117,12 @@
               <div class="card-caption">
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p lang="en" class="team-position">Frontend Developer</p>
+                <ul class="list soc-list">
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="card">
@@ -118,6 +130,12 @@
               <div class="card-caption">
                 <h3 class="team-name">Микола Тарасов</h3>
                 <p lang="en" class="team-position">Marketing</p>
+                <ul class="list soc-list">
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="card">
@@ -125,6 +143,12 @@
               <div class="card-caption">
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p lang="en" class="team-position">UI Designer</p>
+                <ul class="list soc-list">
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item"><a href=""></a></li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -140,37 +164,48 @@
             <li class="clients-item"><a href=""></a></li>
             <li class="clients-item"><a href=""></a></li>
             <li class="clients-item"><a href=""></a></li>
-            <li class="clients-item"><a href=""></a></li>
-            <li class="clients-item"><a href=""></a></li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" lang="en" class="logo">Web<span class="logo-light">Studio</span></a>
-        <address>
-          <ul class="list">
-            <li class="footer-item">
-              <a
-                href="https://goo.gl/maps/4VGZV7UP3L1ZBJYh8"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="link adress"
-              >
-                м. Київ, пр-т Лесі Українки, 26
-              </a>
-            </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="link footer-contacts"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
-            </li>
+        <div class="footer-address">
+          <a href="./index.html" lang="en" class="logo"
+            >Web<span class="logo-light">Studio</span></a
+          >
+          <address>
+            <ul class="list">
+              <li class="footer-item">
+                <a
+                  href="https://goo.gl/maps/4VGZV7UP3L1ZBJYh8"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="link adress"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@devstudio.com" class="link footer-contacts"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="soc-networks">
+          <h2 class="call">приєднуйтесь</h2>
+          <ul class="list soc-list">
+            <li class="soc-item"><a href=""></a></li>
+            <li class="soc-item"><a href=""></a></li>
+            <li class="soc-item"><a href=""></a></li>
+            <li class="soc-item"><a href=""></a></li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
