--- a/index.html
+++ b/index.html
@@ -105,10 +105,30 @@
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-position">Product Designer</p>
                 <ul class="list soc-list">
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -118,10 +138,30 @@
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p lang="en" class="team-position">Frontend Developer</p>
                 <ul class="list soc-list">
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -131,10 +171,30 @@
                 <h3 class="team-name">Микола Тарасов</h3>
                 <p lang="en" class="team-position">Marketing</p>
                 <ul class="list soc-list">
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -144,10 +204,30 @@
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p lang="en" class="team-position">UI Designer</p>
                 <ul class="list soc-list">
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
-                  <li class="soc-item"><a href=""></a></li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-item">
+                    <a class="soc-link" href=""
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -158,12 +238,42 @@
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="list clients-list">
-            <li class="clients-item"><a href=""></a></li>
-            <li class="clients-item"><a href=""></a></li>
-            <li class="clients-item"><a href=""></a></li>
-            <li class="clients-item"><a href=""></a></li>
-            <li class="clients-item"><a href=""></a></li>
-            <li class="clients-item"><a href=""></a></li>
+            <li class="clients-item">
+              <a class="clients-link" href=""
+                ><svg class="logo-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo1"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href=""
+                ><svg class="logo-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo2"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href=""
+                ><svg class="logo-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo3"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href=""
+                ><svg class="logo-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo4"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href=""
+                ><svg class="logo-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo5"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href=""
+                ><svg class="logo-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo6"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </section>
@@ -200,10 +310,30 @@
         <div class="soc-networks">
           <h2 class="call">приєднуйтесь</h2>
           <ul class="list soc-list">
-            <li class="soc-item"><a href=""></a></li>
-            <li class="soc-item"><a href=""></a></li>
-            <li class="soc-item"><a href=""></a></li>
-            <li class="soc-item"><a href=""></a></li>
+            <li class="soc-item">
+              <a class="footer-soc-link" href=""
+                ><svg class="soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="soc-item">
+              <a class="footer-soc-link" href=""
+                ><svg class="soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="soc-item">
+              <a class="footer-soc-link" href=""
+                ><svg class="soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="soc-item">
+              <a class="footer-soc-link" href=""
+                ><svg class="soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </div>
