All without header

--- a/portfolio.html
+++ b/portfolio.html
@@ -200,10 +200,30 @@
         <div class="soc-networks">
           <h2 class="call">приєднуйтесь</h2>
           <ul class="list soc-list">
-            <li class="soc-item"><a href=""></a></li>
-            <li class="soc-item"><a href=""></a></li>
-            <li class="soc-item"><a href=""></a></li>
-            <li class="soc-item"><a href=""></a></li>
+            <li class="soc-item">
+              <a class="footer-soc-link" href=""
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="soc-item">
+              <a class="footer-soc-link" href=""
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="soc-item">
+              <a class="footer-soc-link" href=""
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="soc-item">
+              <a class="footer-soc-link" href=""
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </div>
