--- a/index.html
+++ b/index.html
@@ -312,25 +312,25 @@
           <ul class="list soc-list">
             <li class="soc-item">
               <a class="footer-soc-link" href=""
-                ><svg class="soc-icon" width="20" height="20">
+                ><svg class="footer-soc-icon" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
-                ><svg class="soc-icon" width="20" height="20">
+                ><svg class="footer-soc-icon" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
-                ><svg class="soc-icon" width="20" height="20">
+                ><svg class="footer-soc-icon" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
-                ><svg class="soc-icon" width="20" height="20">
+                ><svg class="footer-soc-icon" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
               ></a>
             </li>
