--- a/index.html
+++ b/index.html
@@ -33,12 +33,20 @@
         </nav>
         <ul class="list contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="link header-contacts mail"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link header-contacts"
+              ><svg class="contacts-icon" width="16" height="16">
+                <use href="/images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="link header-contacts phone">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link header-contacts"
+              ><svg class="contacts-icon" width="16" height="16">
+                <use href="/images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -108,26 +116,30 @@
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -141,26 +153,30 @@
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -174,26 +190,30 @@
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -207,26 +227,30 @@
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href=""
                       ><svg class="soc-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
-                    ></a>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -241,38 +265,44 @@
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="logo-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-logo1"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-logo1"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="logo-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-logo2"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-logo2"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="logo-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-logo3"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-logo3"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="logo-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-logo4"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-logo4"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="logo-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-logo5"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-logo5"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="logo-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-logo6"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -313,26 +343,30 @@
             <li class="soc-item">
               <a class="footer-soc-link" href=""
                 ><svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
                 ><svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
                 ><svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
                 ><svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
