--- a/portfolio.html
+++ b/portfolio.html
@@ -33,10 +33,20 @@
         </nav>
         <ul class="list contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link header-contacts"
+              ><svg class="contacts-icon" width="16" height="16">
+                <use href="/images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="link header-contacts">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link header-contacts"
+              ><svg class="contacts-icon" width="16" height="16">
+                <use href="/images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -54,7 +64,7 @@
           </ul>
           <ul class="list project">
             <li class="item">
-              <a href="" class="link">
+              <a class="link project-card" href="" class="link project-card">
                 <img src="./images/img1.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
                 <div class="project-caption">
                   <h2 class="title">Технокряк</h2>
@@ -63,7 +73,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link project-card">
                 <img
                   src="./images/img2.jpg"
                   alt="Дизайн Постер New Orlean vs Golden Star"
@@ -77,7 +87,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link project-card">
                 <img
                   src="./images/img3.jpg"
                   alt="Додаток Ресторан Seafood"
@@ -91,7 +101,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link project-card">
                 <img
                   src="./images/img4.jpg"
                   alt="Маркетинг Проєкт Prime"
@@ -105,7 +115,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link project-card">
                 <img src="./images/img5.jpg" alt="Додаток Проєкт Boxes" width="370" height="294" />
                 <div class="project-caption">
                   <h2 class="title">Проєкт Boxes</h2>
@@ -114,7 +124,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link project-card">
                 <img
                   src="./images/img6.jpg"
                   alt="Веб-сайт Inspiration has no Borders"
@@ -128,7 +138,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link project-card">
                 <img
                   src="./images/img7.jpg"
                   alt="Дизайн Видання Limited Edition"
@@ -142,7 +152,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link project-card">
                 <img src="./images/img8.jpg" alt="Маркетинг Проєкт LAB" width="370" height="294" />
                 <div class="project-caption">
                   <h2 class="title">Проєкт LAB</h2>
@@ -151,7 +161,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link project-card">
                 <img
                   src="./images/img9.jpg"
                   alt="Додаток Growing Business"
