--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li>
             <a href="mailto:info@devstudio.com" class="link header-contacts"
               ><svg class="contacts-icon" width="16" height="12">
-                <use href="/images/symbol-defs.svg#icon-envelope"></use>
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -43,7 +43,7 @@
           <li>
             <a href="tel:+380961111111" class="link header-contacts"
               ><svg class="contacts-icon" width="10" height="16">
-                <use href="/images/symbol-defs.svg#icon-smartphone"></use>
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -338,7 +338,7 @@
           </address>
         </div>
         <div class="soc-networks">
-          <h2 class="call">приєднуйтесь</h2>
+          <p class="call">приєднуйтесь</p>
           <ul class="list soc-list">
             <li class="soc-item">
               <a class="footer-soc-link" href=""
