--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
           <li>
             <a href="mailto:info@devstudio.com" class="link header-contacts"
               ><svg class="contacts-icon" width="16" height="12">
-                <use href="/images/symbol-defs.svg#icon-envelope"></use>
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -43,7 +43,7 @@
           <li>
             <a href="tel:+380961111111" class="link header-contacts"
               ><svg class="contacts-icon" width="10" height="16">
-                <use href="/images/symbol-defs.svg#icon-smartphone"></use>
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -208,31 +208,35 @@
           </address>
         </div>
         <div class="soc-networks">
-          <h2 class="call">приєднуйтесь</h2>
+          <p class="call">приєднуйтесь</p>
           <ul class="list soc-list">
             <li class="soc-item">
               <a class="footer-soc-link" href=""
                 ><svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
                 ><svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
                 ><svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="soc-item">
               <a class="footer-soc-link" href=""
                 ><svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
-              ></a>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
